# aeqwabun

./: .pre-commit-config.yaml  README.md  dev_requirements.txt  pyproject.toml  setup.cfg
aeqwabun/synspec/: synspec.py  units.py
tests/: test_synspec.py  test_units.py
