[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.1.0"
testpaths = ["tests"]

[tool.mypy]
files = ["aeqwabun", "tests"]
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
