[metadata]
name = aeqwabun
author = Sriram Krishna
author_email = ksri91@gmail.com
description = A module which helps using TLUSTY and SYNSPEC to calculate abundances given equivalent widths.
version = 0.0.1

classifiers =
  Programming Language :: Python :: 3.10
  License :: OSI Approved :: MIT License
license_files =
  LICENSE

[options]
python_requires = >= 3.10
packages = aeqwabun
zip_safe = True


[flake8]
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
